Rename cocurrency limit config to job_scheduler_concurrency_limits